Camino only - Bug 364075:Ensure that separators in bookmarks bar always appear as separators. r=cl sr=smorgan